syntax = "proto3";

package userdashboard;

message User {
  int32 id = 1;
  string email = 2;
  string role = 3;
  string status = 4;
  string createdAt = 5;
  string emailHash = 6;
  string signature = 7;
}

message UsersExport {
  repeated User users = 1;
  string exportedAt = 2;
  int32 totalCount = 3;
}

